--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,1 +1,4 @@
-<p>accueil works!</p>
+<h2>Bienvenue!</h2>
+<p>Gestionnaire des bouteilles de vin à partir d’une application Web.</p>
+<p><a routerLink="/login">Login</a></p>
+<p><a routerLink="/enregistrer">Enregistrer</a></p>
