--- a/frontend/src/app/layout/entete/entete.component.html
+++ b/frontend/src/app/layout/entete/entete.component.html
@@ -1,1 +1,5 @@
-<p>entete works!</p>
+<img class="logo-img" src="assets/vino-logo-black.svg" alt="Vino logo" width="100">
+
+<!-- <h1>Vino 🍷</h1> -->
+<p><a routerLink="/accueil">Accueil</a></p>
+<hr>
