--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="container">
+
+    <h2 class="login-title">Login</h2>
+
+    <form class="login-form">
+
+        <div>
+            <label for="courriel">Courriel </label>
+            <input id="courriel" type="email" name="courriel" placeholder="courriel@example.com" required />
+        </div>
+
+        <div>
+            <label for="mot_de_passe">Mot de passe </label>
+            <input id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Mot de passe" required />
+        </div>
+
+        <button class="btn btn--form" type="submit">
+            Connecter
+        </button>
+
+        <p><small><a routerLink="/enregistrer">Voulez-vous s'enregistrer?</a></small></p>
+
+    </form>
+</div>
