--- a/frontend/src/app/auth/enregistrer/enregistrer.component.html
+++ b/frontend/src/app/auth/enregistrer/enregistrer.component.html
@@ -1,30 +1,34 @@
-<div class="container">
+<div class="mat-typography">
 
-    <h2 class="login-title">Enregistrer</h2>
+    <h2>Enregistrer</h2>
 
-    <form class="login-form">
-       <div>
-            <label for="nom">Nom </label>
-            <input id="nom" type="text" placeholder="Votre Nom" name="nom" required />
-        </div>
+    <form>
+        <mat-form-field>
+            <mat-label>Nom</mat-label>
+            <input matInput id="nom" type="text" placeholder="Votre Nom" name="nom" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Courriel</mat-label>
+            <input matInput id="courriel" type="email" name="courriel" placeholder="courriel@example.com" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Mot de passe</mat-label>
+            <input matInput id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Mot de passe" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Confirmation du mot de passe</mat-label>
+            <input matInput id="confirmation_mot_de_passe" type="password" name="confirmation_mot_de_passe"
+                placeholder="Confirmation du mot de passe" required />
+        </mat-form-field>
 
         <div>
-            <label for="courriel">Courriel </label>
-            <input id="courriel" type="email" name="courriel"  placeholder="courriel@example.com" required />
+            <button mat-raised-button class="btn btn--form" type="submit">Enregistrer</button>
         </div>
-
-        <div>
-            <label for="mot_de_passe">Mot de passe </label>
-            <input id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Mot de passe" required />
-        </div>
-        <div>
-            <label for="mot_de_passe">Confirmation du mot de passe </label>
-            <input id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Confirmation du mot de passe" required />
-        </div>
-
-        <button class="btn btn--form" type="submit">
-            Enregistrer
-        </button>
-        <p><small><a routerLink="/login">Avez-vous une compte?</a></small></p>
+        
+        <p><small><a routerLink="/login">Avez-vous un compte?</a></small></p>
     </form>
+
 </div>
