--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,23 +1,23 @@
-<div class="container">
+<div class="mat-typography">
 
-    <h2 class="login-title">Login</h2>
+    <h2>Login</h2>
 
-    <form class="login-form">
+    <form>
+
+        <mat-form-field>
+            <mat-label>Courriel</mat-label>
+            <input matInput id="courriel" type="email" name="courriel" placeholder="courriel@example.com" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Mot de passe</mat-label>
+            <input matInput id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Mot de passe" required />
+        </mat-form-field>
 
         <div>
-            <label for="courriel">Courriel </label>
-            <input id="courriel" type="email" name="courriel" placeholder="courriel@example.com" required />
+            <button mat-raised-button class="btn btn--form" type="submit">Connecter</button>
         </div>
-
-        <div>
-            <label for="mot_de_passe">Mot de passe </label>
-            <input id="mot_de_passe" type="password" name="mot_de_passe" placeholder="Mot de passe" required />
-        </div>
-
-        <button class="btn btn--form" type="submit">
-            Connecter
-        </button>
-
+        
         <p><small><a routerLink="/enregistrer">Voulez-vous s'enregistrer?</a></small></p>
 
     </form>
