--- a/frontend/src/app/layout/entete/entete.component.html
+++ b/frontend/src/app/layout/entete/entete.component.html
@@ -1,5 +1,5 @@
 <img class="logo-img" src="assets/vino-logo-black.svg" alt="Vino logo" width="100">
 
 <!-- <h1>Vino 🍷</h1> -->
-<p><a routerLink="/accueil">Accueil</a></p>
+<p><a routerLink="/accueil"><mat-icon>home</mat-icon>Accueil</a></p>
 <hr>
