ajouts des dossiers/ fichiers composantes de layout - vino2-m21 fc

--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,4 +1,19 @@
-<h2>Bienvenue!</h2>
-<p>Gestionnaire des bouteilles de vin à partir d’une application Web.</p>
-<p><a routerLink="/login">Login</a></p>
-<p><a routerLink="/enregistrer">Enregistrer</a></p>
+<app-entete></app-entete>
+<div class="body">
+  <div class="produit">
+    <div class="resume-produit">
+      <img src="../../../assets/vin.svg" alt="vin.png" />
+      <img src="../../../assets/cellar-dospng.png" alt="cellar.png" />
+      <img src="../../../assets/vin.svg" alt="vin.png" />
+    </div>
+  </div>
+  <div class="description-note">
+    <div class="notes card">
+      <h2>Bienvenue sur Vino!</h2>
+      <p>
+        Nous sommes ravis de pouvoir vous offrir nos services de gestion pour vos celliers de vins!
+      </p>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
