--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -1,2 +1,8 @@
-<hr>
-<small>Vino - Application Web - 2023</small>
+<div class="footer">
+  <div class="redirect">
+    <p><a routerLink="/enregistrer">Enregistrer</a></p>
+    <p><a routerLink="/login">Login</a></p>
+  </div>
+
+
+</div>
