--- a/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
+++ b/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
@@ -1,1 +1,10 @@
-<p>supprimer-cellier works!</p>
+<h1 mat-dialog-title>Suppression de Cellier</h1>
+<div mat-dialog-content>
+  Voulez-vous suppimer
+  <hr>
+  <strong>{{ nom }}</strong> ?
+</div>
+<div mat-dialog-actions class="modal-footer">
+  <button mat-button (click)="fermerCellier()">Annuler</button>
+  <button mat-button class="supprimer" (click)="supprimerCellier(id)" >Supprimer</button>
+</div>
