corriget la qauantite

--- a/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
+++ b/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
@@ -16,43 +16,42 @@
     </mat-autocomplete>
   </div>
 
-  <form >
+  <form [formGroup]="formAjout" class="formulaire">
     <mat-form-field class="">
       <mat-label>Nom du vin</mat-label>
-      <input matInput type="text"  [value]="bouteilleSelected?.bouteille_nom" >
+      <input matInput type="text" formControlName="nom" [value]="bouteilleSelected?.bouteille_nom" >
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Millesime</mat-label>
-      <input matInput type="number" >
+      <input matInput type="number" formControlName="millesime" >
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Type</mat-label>
-      <input matInput type="text" [value]="bouteilleSelected?.type.nom"  >
+      <input matInput type="text" formControlName="type" [value]="bouteilleSelected?.type.nom"  >
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Pays</mat-label>
-      <input matInput type="text" [value]="bouteilleSelected?.pays.nom" >
+      <input matInput type="text" formControlName="pays" [value]="bouteilleSelected?.pays.nom" >
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Garde</mat-label>
-      <input matInput type="text"  >
+      <input matInput type="text" formControlName="garde" >
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Date d'achat</mat-label>
-      <input matInput type="date" [matDatepicker]="picker">
-      <mat-hint>DD/MM/YYYY</mat-hint>
-      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <input matInput type="date" formControlName="date_achat" >
+      
+    
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Quantité</mat-label>
-      <input matInput type="number"  >
+      <input matInput type="number" formControlName="quantite" >
     </mat-form-field>
 
     <mat-form-field class="">
@@ -61,7 +60,7 @@
     </mat-form-field>
 
     <div class="button">
-      <button type="submit" >Ajouter</button>
+      <button  (click)="ajouterBouteille()">Ajouter</button>
     </div>
   </form>
 </div>
