Ajustement du html partout

--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
@@ -8,7 +8,7 @@
 
   <div class="title">
    <!--<p>{{ bouteille.bouteille?.nom }}</p>--> 
-    <a [routerLink]="['ajouter']" ><span>Ajouter une bouteille</span><i class='bx bx-plus'></i></a>
+    <a [routerLink]="['ajouter']" ><span>Ajouter une bouteille</span><mat-icon>add_circle</mat-icon></a>
   </div>
 
   <div class="card">
