--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,12 +1,12 @@
 <app-entete></app-entete>
 <div class="body">
-  <div class="produit">
-    <div class="resume-produit">
+   <!-- <div class="produit">
+   <div class="resume-produit">
       <img src="../../../assets/vin.svg" alt="vin.png" />
       <img src="../../../assets/cellar-dospng.png" alt="cellar.png" />
       <img src="../../../assets/vin.svg" alt="vin.png" />
     </div>
-  </div>
+  </div> -->
   <div class="description-note">
     <div class="notes card">
       <h2>Bienvenue sur Vino!</h2>
