--- a/frontend/src/app/layout/accueil/accueil.component.scss
+++ b/frontend/src/app/layout/accueil/accueil.component.scss
@@ -78,7 +78,7 @@
     margin: 10% 0;
     border-radius: 0.8rem;
     padding: 4%;
-    background: rgb(157 243 196 / 88%);
+    background: white;
   }
 
   .body .description-note .card h2 {
