--- a/frontend/src/app/layout/entete/entete.component.html
+++ b/frontend/src/app/layout/entete/entete.component.html
@@ -1,2 +1,5 @@
 <div class="header">
+    <div class="logo-container">
+        <a href="/"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
+      </div>      
 </div>
