--- a/frontend/src/app/layout/entete-auth/entete-auth.component.scss
+++ b/frontend/src/app/layout/entete-auth/entete-auth.component.scss
@@ -42,5 +42,30 @@
     text-align: center;
     font-size: 10px;
   }
+  
+  /* Champ de recherche */
+  .search-box {
+    display: flex;
+    align-items: center;
+    background: rgb(230 255 241);
+    border-radius: 0.4rem;
+    padding: 0.5rem;
+    box-shadow: 3px 1rem 1rem rgba(0, 0, 0, 0.2);
+    opacity: 0.7;
+  }
 
+  .search-box i {
+    background: rgb(230 255 241);
+    font-size: 1.4rem;
+    color: rgba(20, 20, 20, 0.658);
+  }
+
+  .search-box input {
+    background: rgb(230 255 241);
+    width: 90%;
+    font-size: 1rem;
+    color: black;
+    padding-left: 3%;
+    
+  }
 }
