--- a/frontend/src/app/layout/entete/entete.component.scss
+++ b/frontend/src/app/layout/entete/entete.component.scss
@@ -1,12 +1,31 @@
+.logo-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+.logo-container img {
+  max-width: 100%;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+}
+
 @media (min-width: 220px) {
   .header {
-    position: relative;
-    top: 10px;
-    left: 0;
-    width: 100%;
-    padding: 10% 5%;
-    display: flex;
-    align-items: center;
-    z-index: 100;
+    /* ... Votre code existant ... */
+    justify-content: space-between;
+  }
+
+  .logo-container {
+    flex: 0 0 100px; /* Taille minimale de 100px */
+  }
+
+  .logo-container img {
+    max-width: 100%;
+    min-width: 100px; /* Taille minimale de 100px */
+    max-height: 100px;
   }
 }
