Ajustement de entete composant

--- a/frontend/src/app/cellier/liste-cellier/liste-cellier.component.html
+++ b/frontend/src/app/cellier/liste-cellier/liste-cellier.component.html
@@ -1,5 +1,3 @@
-<app-entete-auth></app-entete-auth>
-
 <div class="body">
   <!-- <div class="search-box">
         <mat-icon>search</mat-icon><input type="text" name="search" id="search" placeholder="Rechercher" />
@@ -29,7 +27,7 @@
         </mat-card-header>
         <mat-card-content>
           <span>{{ cellier.sumQuantite }}</span>
-          <img mat-card-image src="../../../assets/wine_3bottles.svg" alt="Image de bouteilles">
+          <img mat-card-image src="assets/wine_3bottles.svg" alt="Image de bouteilles">
         </mat-card-content>
         <mat-card-footer>
           <a [routerLink]="['/cellier', cellier.id, 'bouteille']" mat-button>Afficher</a>
