--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,5 +1,9 @@
-<app-entete></app-entete>
 <div class="body">
+  <div class="header">
+    <div class="logo-container">
+        <a href="/accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+      </div>      
+</div>
    <!-- <div class="produit">
    <div class="resume-produit">
       <img src="../../../assets/vin.svg" alt="vin.png" />
@@ -11,7 +15,7 @@
     <div class="notes card">
       <h2>Bienvenue sur Vino!</h2>
       <p>
-        Nous sommes ravis de pouvoir vous offrir nos services de gestion pour vos celliers de vins!
+        Nous sommes ravis de pouvoir vous offrir nos services de gestion pour vos celliers de vins! 
       </p>
     </div>
   </div>
