--- a/frontend/src/app/layout/entete/entete.component.html
+++ b/frontend/src/app/layout/entete/entete.component.html
@@ -1,5 +1,1 @@
-<div class="header">
-    <div class="logo-container">
-        <a href="/"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
-      </div>      
-</div>
+<p>entete works!</p>
