--- a/frontend/src/app/layout/entete-auth/entete-auth.component.html
+++ b/frontend/src/app/layout/entete-auth/entete-auth.component.html
@@ -1,17 +1,19 @@
-<div class="header">
+<div class="header" *ngIf="estUtilisateurConnecte()">
 
-  <button mat-icon-button class="mat-rounded" (click)="retourner()" routerLinkActive="actif"><mat-icon>arrow_back</mat-icon></button>
+  <button mat-icon-button class="mat-rounded" (click)="retourner()"
+    routerLinkActive="actif"><mat-icon>arrow_back</mat-icon></button>
 
   <!-- <a href="#"><i class="arrow-left bx bx-left-arrow-alt"></i></a> -->
 
   <a href="/accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
 
-  <button mat-icon-button class="mat-rounded" routerLink="#" routerLinkActive="actif"><mat-icon>shopping_basket</mat-icon></button>
+  <button mat-icon-button class="mat-rounded" routerLink="#"
+    routerLinkActive="actif"><mat-icon>shopping_basket</mat-icon></button>
 
   <!-- <a href="#"><i class="bx bxs-cart" data-content="0"></i></a> -->
 
 </div>
 
-  <!--<div class="search-box">
+<!--<div class="search-box">
     <mat-icon>search</mat-icon><input type="text" name="search" id="search" placeholder="Rechercher" />
   </div> -->
