--- a/frontend/src/app/layout/accueil/accueil.component.html
+++ b/frontend/src/app/layout/accueil/accueil.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <div class="header">
     <div class="logo-container">
-        <a href="/accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+        <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
       </div>      
 </div>
    <!-- <div class="produit">
@@ -12,10 +12,10 @@
     </div>
   </div> -->
   <div class="description-note">
-    <div class="notes card">
+    <div class="notes card center">
       <h2>Bienvenue sur Vino!</h2>
       <p>
-        Nous sommes ravis de pouvoir vous offrir nos services de gestion pour vos celliers de vins! 
+        Un gestionnaire de cellier de vin à partir d’une application Web.
       </p>
     </div>
   </div>
