--- a/frontend/src/app/layout/footer-auth/footer-auth.component.html
+++ b/frontend/src/app/layout/footer-auth/footer-auth.component.html
@@ -3,7 +3,7 @@
 
     <a [matMenuTriggerFor]="menu" routerLinkActive="active"><mat-icon>menu</mat-icon></a>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item><mat-icon>info</mat-icon>À Propos</button>
+      <button mat-menu-item routerLink="/a-propos" routerLinkActive="active"><mat-icon>info</mat-icon>À Propos</button>
       <button mat-menu-item><mat-icon>flag</mat-icon>Signaler une erreur</button>
     </mat-menu>
     
