--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -1,8 +1,7 @@
 <div class="footer">
   <div class="redirect">
-    <p><a routerLink="/enregistrer">Enregistrer</a></p>
-    <p><a routerLink="/login">Login</a></p>
+    <button routerLink="/login" mat-raised-button class="mat-button-rounded" routerLinkActive="actif">Login</button>
+    <p><a routerLink="/enregistrer">Voulez-vous s'enregistrer?</a></p>
   </div>
-
 
 </div>
