--- a/frontend/src/app/layout/entete-auth/entete-auth.component.html
+++ b/frontend/src/app/layout/entete-auth/entete-auth.component.html
@@ -1,13 +1,13 @@
 <div class="header" *ngIf="estUtilisateurConnecte()">
 
-  <button mat-icon-button class="mat-rounded" (click)="retourner()"
+  <button mat-icon-button class="mat-button-rounded mat-raised-button" (click)="retourner()"
     routerLinkActive="actif"><mat-icon>arrow_back</mat-icon></button>
 
   <!-- <a href="#"><i class="arrow-left bx bx-left-arrow-alt"></i></a> -->
 
   <a href="/accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
 
-  <button mat-icon-button class="mat-rounded" routerLink="#"
+  <button mat-icon-button class="mat-button-rounded mat-raised-button" routerLink="#"
     routerLinkActive="actif"><mat-icon>shopping_basket</mat-icon></button>
 
   <!-- <a href="#"><i class="bx bxs-cart" data-content="0"></i></a> -->
