--- a/frontend/src/app/layout/footer-auth/footer-auth.component.html
+++ b/frontend/src/app/layout/footer-auth/footer-auth.component.html
@@ -13,6 +13,7 @@
     <a [matMenuTriggerFor]="profile" routerLinkActive="active"><mat-icon>settings</mat-icon></a>
     <mat-menu #profile="matMenu">
       <button mat-menu-item><mat-icon>person</mat-icon>Nom: <strong> {{ nom }}</strong></button>
+      <button mat-menu-item *ngIf="profil !== 2" (click)="importationSaq()"><mat-icon>sync</mat-icon>Importation SAQ</button>
       <button mat-menu-item (click)="deconnexion()"><mat-icon>logout</mat-icon>Déconnexion</button>
     </mat-menu>
 
